fix: added placeholders

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,8 +42,8 @@
     </main>
 
     <script>
-        const API_BASE = "https://7ksh9hbi88.execute-api.us-east-1.amazonaws.com/stage";
-        const API_KEY = "Be7cHTa2gw4lxVnYcfOEm6txXVRQUVwU8egh2oDE";
+        const API_BASE = "https://your-api-endpoint.com";
+        const API_KEY = "your-api-key";
 
         async function uploadPhoto() {
             const fileInput = document.getElementById("fileInput");
